syntax = "proto3";

message ClientMessage {
    enum Type {
        HELLO = 0;
        CAPTURE_STARTED = 1;
        CAPTURE_STOPPED = 2;
        CAPTURE_ERROR = 3;
        FRAME = 4;
        BOOKMARK = 5;
    }
    
    message Hello {
        int32 pid = 1;
        string executable_path = 2;
        string window_title = 3;
    }

    message Capture {
        int32 width = 1;
        int32 height = 2;
    }

    message Bookmark {
        enum BookmarkType {
            NONE = 0;
            CSGO = 1;
        }

        message CSGODeepIntegration {
            enum CSGOEvent {
                MATCH_START = 0;
                MATCH_END = 1;
                ROUND_START = 2;
                ROUND_END = 3;
                KILL = 4;
                DEATH = 5;
                SUICIDE = 6;
                HOSTAGE_RESCUED = 7;
                BOMB_PLANTED = 8;
                BOMB_DEFUSED = 9;
            }

            message KillDetails {
                bool is_headshot = 1;
                bool is_wallbang = 2;
                bool with_assist = 3;
                bool through_smoke = 4;
                bool while_blinded = 5;
            }

            CSGOEvent event = 1;
            bool is_competitive = 2;
            KillDetails kill_details = 3;
        }

        bool is_manual = 1;
        BookmarkType type = 2;
        CSGODeepIntegration csgo = 3;
    }

    Type message_type = 1;
    Hello hello = 2;
    Capture capture = 3;
    Bookmark bookmark = 4;
    bytes frame = 5;
}